# SCPT

./: main.py  pyproject.toml  readme.md
pages/: home.py  ray_paths.py
src/scpt/: __init__.py  inversion_model.py  organisation.py  picking.py  plotting.py  processing.py  ray_tracing.py  synthetic.py  typical_values.py  velocity_models.py
