[project]
name = "scpt"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12.0, <3.13"
dependencies = [
    "obspy>=1.4.2",
    "scipy-stubs==1.16.3.2",
    "uncertainties>=3.2.3",
    "setuptools<=81.0.0",
    "tqdm>=4.67.3",
    "scipy>=1.17.1",
    "streamlit>=1.56.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pytest>=9.0.2",
    "snakeviz>=2.2.2",
]

[tool.uv]
package = true
